# stoker

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml
agent/: README.md  dev.toml  pyproject.toml
agent/src/stoker_agent/: __init__.py  __main__.py  config.py  main.py  metrics.py
agent/src/stoker_agent/collectors/: __init__.py
agent/src/stoker_agent/commands/: __init__.py
agent/src/stoker_agent/miners/: __init__.py
agent/src/stoker_agent/transport/: __init__.py
agent/tests/: test_config.py  test_metrics.py  test_smoke.py
docs/: learning-notes.md  roadmap.md
docs/decisions/: 0001-not-an-os.md  0002-prometheus-for-metrics.md  0003-miner-driver-abstraction.md  0004-gpu-collector-abstraction.md  0005-miner-api-localhost-binding.md  0006-metrics-transport-reachability.md  0007-ui-framework-vue.md
docs/research/: 0001-name-availability.md  0002-hiveos-alternatives.md  0003-wildrig-multi-api.md  0004-architecture-validation.md  0005-stack-implementation-practices.md
server/: README.md  pyproject.toml
server/src/stoker_server/: __init__.py  config.py  main.py
server/tests/: test_health.py  test_smoke.py
web/: README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.spec.ts  App.vue
