[project]
name = "stoker-agent"
version = "0.1.0"
description = "Stoker agent — сбор GPU/майнер-метрик, /metrics, команды от сервера"
readme = "README.md"
authors = [
    { name = "dgoncharov", email = "dgoncharov@enfint.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "prometheus-client>=0.25.0",
    "pydantic-settings>=2.14.2",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
stoker-agent = "stoker_agent.main:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/F — pycodestyle+pyflakes, I — isort, UP — pyupgrade, B — bugbear, SIM — simplify
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
mypy_path = "src"
explicit_package_bases = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
