[project]
name = "stoker-server"
version = "0.1.0"
description = "Stoker server — FastAPI API, WS-хаб для агентов, state (SQLite)"
readme = "README.md"
authors = [
    { name = "dgoncharov", email = "dgoncharov@enfint.ai" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
stoker-server = "stoker_server:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/F — pycodestyle+pyflakes, I — isort, UP — pyupgrade, B — bugbear, SIM — simplify
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
